fix spacing on bag icon mobile menu

--- a/assets/scss/layouts/_header.scss
+++ b/assets/scss/layouts/_header.scss
@@ -10,6 +10,7 @@
 }
 
 .bag {
+  text-align: right;
   &__icon {
     width: $menu-icon-size;
     height: $menu-icon-size;
